Clened up code, improved xml, completed servo code, made pwm i2c or bbb based on xml

--- a/Android Client/DalekController/res/layout/activity_control.xml
+++ b/Android Client/DalekController/res/layout/activity_control.xml
@@ -2,69 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ControlActivity" >
-
-   
- 	<!-- <fragment android:name="com.dalekcontroller.device.motor.BIDirectionalMotorPair"
-              android:id="@+id/biMotorFragment" 
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" /> -->
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/zpt_container"
-        android:layout_marginBottom="226dp"
-        android:layout_marginLeft="61dp"
-        android:layout_toRightOf="@+id/zpt_container" />
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/zpt_container"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="185dp"
-        android:layout_marginRight="101dp" />
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="43dp"
-        android:layout_toRightOf="@+id/zpt_container" />
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/zpt_container"
-        android:layout_marginLeft="57dp"
-        android:layout_marginTop="61dp"
-        android:layout_toRightOf="@+id/zpt_container" />
-
-    <FrameLayout
-        android:id="@+id/zpt_container"
-        android:layout_width="300dp"
-        android:layout_height="400dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_weight="0.70" >
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </FrameLayout>
+    tools:context=".ControlActivity" 
+    android:id="@+id/smallControlLayout"
+    >
+	
 
     <Button
         android:id="@+id/disconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/zpt_container"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:onClick="disconnect_func"
         android:text="Disconnect" />
+
+    <FrameLayout
+        android:id="@+id/zpt_container"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" >
+
+    </FrameLayout>
 
 </RelativeLayout>
